2011-03-02 Version 1.2.0
 - Moved to git repository
 - TODO: updated
 - DESCRIPTION: 
   - changed version number, author and maintainer
   - removed dependency on Runit for testthat
 - tests/
   - 1_init.R: Added 
   - 2_is.operator.R: Added
   - 3_inverse.R: Added
 - R/
   - odg.R: deleted
   - zzz.R: removed old anouncement 
   - inverse.R:  
     - inverse.function: now properly returns a function
   - fun2name.R: name2fun properly returns a function

2010-09-28 Version 1.1.1
 - R/inverse.R: fixed bug that produced error on dispatch.

2010-09-24 Version 1.1.0
 - R/zzz.R: greatly simplified .onAttach()
 + R/odg.R: added
 - Removed inst/options:  Options are not defined in .initOps in R/init.R
 - R/init.R: Added definition for !=
 + R/rel.type.R: Added rel.type.call function.


2010-07-18 Version 1.0.0
 - R/operator.type.R: Only registered operators are checked against a 
   type.
 - Various documentation tweaks.
 - Added optimization to search REGISTERED before UNREGISTERED operators
   in various functions
 - R/fun2name.R: Added name2fun


2010-07-16 Version 0.2.0 
 - First CRAN Release
