@@ -1,7 +1,7 @@
 Package: operator.tools
 Type: Package
 Title: Utilities for working with R's operators 
-Version: 1.2.0
+Version: 1.2.1
 Date: 2011-03-02
 Author: Christopher Brown
 Maintainer: Christopher Brown <chris.brown@decisionpatterns.com>
