@@ -1,3 +1,11 @@
+2011-03-02 Version 1,2.0
+ - tests/: 
+   - fixed all tests
+   - 2_operators.R renamed from 2_is.operators.R, it didn't work 
+     otherwise.
+   - R/zzz.R: added explicit utils::installed.packages
+   - man/rel.type.Rd: added alias for rel.type.call 
+
 2011-03-02 Version 1.2.0
  - Moved to git repository
  - TODO: updated
